# MultiQC_neuroimaging

./: .dockerignore  .gitignore  Dockerfile  README.md  multiqc_config.yaml  pyproject.toml
.github/workflows/: docker-deploy.yml  lint.yml  test.yml
neuroimaging/: custom_code.py
neuroimaging/modules/bundles/: __init__.py  bundles.py
neuroimaging/modules/cortical/: __init__.py  cortical.py
neuroimaging/modules/cortical/tests/: __init__.py  test_cortical.py
neuroimaging/modules/coverage/: __init__.py  coverage.py
neuroimaging/modules/coverage/tests/: test_coverage.py
neuroimaging/modules/framewise_displacement/: framewise_displacement.py
neuroimaging/modules/framewise_displacement/tests/: __init__.py  test_framewise_displacement.py
neuroimaging/modules/metricsinroi/: __init__.py  metricsinroi.py
neuroimaging/modules/metricsinroi/tests/: __init__.py  test_metricsinroi.py
neuroimaging/modules/streamline_count/: streamline_count.py
neuroimaging/modules/streamline_count/tests/: __init__.py  test_streamline_count.py
neuroimaging/modules/subcortical/: subcortical.py
neuroimaging/modules/subcortical/tests/: __init__.py  test_subcortical.py
neuroimaging/modules/tractometry/: tractometry.py
neuroimaging/modules/tractometry/tests/: __init__.py  test_tractometry.py
neuroimagingQC/: cli.py  custom_code.py
neuroimagingQC/modules/cortical/: cortical.py
neuroimagingQC/modules/cortical/tests/: test_cortical.py
neuroimagingQC/modules/coverage/: coverage.py
neuroimagingQC/modules/coverage/tests/: __init__.py  test_coverage.py
neuroimagingQC/modules/framewise_displacement/: __init__.py  framewise_displacement.py
neuroimagingQC/modules/framewise_displacement/tests/: test_framewise_displacement.py
neuroimagingQC/modules/streamline_count/: __init__.py  streamline_count.py
neuroimagingQC/modules/streamline_count/tests/: test_streamline_count.py
neuroimagingQC/modules/subcortical/: __init__.py  subcortical.py
neuroimagingQC/modules/subcortical/tests/: test_subcortical.py
neuroimagingQC/modules/tractometry/: __init__.py  tractometry.py
neuroimagingQC/modules/tractometry/tests/: test_tractometry.py
tests/: conftest.py  test_modules.py
