[build-system]
requires = [
    "setuptools",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "neuroimagingQC"
version = "0.1"
authors = [
    {name = "Anthony Gagnon", email = "anthony.gagnon7@usherbrooke.ca"},
]
description = "A MultiQC plugin for neuroimaging quality control reports."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["neuroimaging", "dMRI", "white matter", "tractometry", "quality control"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: JavaScript",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]

[tool.setuptools]
packages = [
    "neuroimagingQC",
    "neuroimagingQC.modules",
    "neuroimagingQC.modules.tractometry",
    "neuroimagingQC.modules.cortical",
    "neuroimagingQC.modules.subcortical",
    "neuroimagingQC.modules.framewise_displacement",
    "neuroimagingQC.modules.coverage",
    "neuroimagingQC.modules.streamline_count",
]

[project.urls]
Repository = "https://github.com/gagnonanthony/neuroimagingQC"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.entry-points."multiqc.modules.v1"]
tractometry = "neuroimagingQC.modules.tractometry:MultiqcModule"
cortical = "neuroimagingQC.modules.cortical:MultiqcModule"
subcortical = "neuroimagingQC.modules.subcortical:MultiqcModule"
framewise_displacement = "neuroimagingQC.modules.framewise_displacement:MultiqcModule"
coverage = "neuroimagingQC.modules.coverage:MultiqcModule"
streamline_count = "neuroimagingQC.modules.streamline_count:MultiqcModule"

[project.entry-points."multiqc.cli_options.v1"]
single_subject = "neuroimagingQC.cli:single_subject"

[project.entry-points."multiqc.hooks.v1"]
execution_start = "neuroimagingQC.custom_code:neuroimagingQC_execution_start"

[tool.ruff]
line-length = 120
target-version = "py312"
ignore-init-module-imports = true
ignore = ["F401"]  # unused-import

[tool.mypy]
check_untyped_defs = true
plugins = ["pydantic.mypy"]
