[build-system]
requires = [
    "setuptools",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "neuroimaging"
version = "0.1"
authors = [
    {name = "Anthony Gagnon", email = "anthony.gagnon7@usherbrooke.ca"},
]
description = "A MultiQC plugin for neuroimaging quality control reports."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["neuroimaging", "dMRI", "white matter", "tractometry", "quality control"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: JavaScript",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Neuroimaging",
    "Topic :: Scientific/Engineering :: Visualization",
]

[tool.setuptools]
packages = [
    "neuroimaging",
    "neuroimaging.modules",
    "neuroimaging.modules.tractometry",
    "neuroimaging.modules.metricsinroi",
    "neuroimaging.modules.cortical",
    "neuroimaging.modules.subcortical",
    "neuroimaging.modules.framewise_displacement",
    "neuroimaging.modules.coverage",
    "neuroimaging.modules.streamline_count",
]

[project.urls]
Repository = "https://github.com/nf-neuro/MultiQC_neuroimaging"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist",
    "pre-commit"
]

[project.entry-points."multiqc.modules.v1"]
tractometry = "neuroimaging.modules.tractometry:MultiqcModule"
cortical = "neuroimaging.modules.cortical:MultiqcModule"
subcortical = "neuroimaging.modules.subcortical:MultiqcModule"
framewise_displacement = "neuroimaging.modules.framewise_displacement:MultiqcModule"
coverage = "neuroimaging.modules.coverage:MultiqcModule"
streamline_count = "neuroimaging.modules.streamline_count:MultiqcModule"
metricsinroi = "neuroimaging.modules.metricsinroi:MultiqcModule"

[project.entry-points."multiqc.cli_options.v1"]
single_subject = "neuroimaging.cli:single_subject"

[project.entry-points."multiqc.hooks.v1"]
execution_start = "neuroimaging.custom_code:neuroimaging_execution_start"

[tool.ruff]
line-length = 120
target-version = "py312"
ignore-init-module-imports = true
ignore = ["F401"]  # unused-import

[tool.mypy]
check_untyped_defs = true
plugins = ["pydantic.mypy"]
